[package]
name = "realraum_backend_sounds"
version = "0.0.0"
edition = "2021"
authors = ["Tanja <rust@tanja.pw>"]
description = "A sound-playing server backend for Realraum"
documentation = "https://docs.rs/realraum_backend_sounds/latest/realraum_backend_sounds/"
homepage = "https://github.com/realraum/realraum-backend#readme"
repository = "https://github.com/realraum/realraum-backend"
license = "AGPL-3.0-or-later"
# keywords = []
# categories = []
include = ["/src", "/Cargo.toml", "/README.md", "/LICENSE.md"]

[dependencies]
axum = { version = "0.6.20", features = ["http2", "ws"] }
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "cors", "compression-full"] }
